<resources>
    <string name="app_name">DigitalAddressCode</string>
    <string name="nav_home">Home</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_add">Add New Address</string>
    <string name="nav_address_list">Address List</string>
    <string name="nav_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_search">Search</string>
    <string name="search_address">search address/address code</string>
</resources>
